--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "@mui/icons-material": "^5.10.6",
     "@mui/material": "^5.10.7",
     "@mui/x-data-grid": "^5.17.4",
+    "@mui/x-data-grid-generator": "^5.17.4",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "immer": "^9.0.15",
     "node-sass": "^7.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
